--- a/src/components/TopNav/index.css
+++ b/src/components/TopNav/index.css
@@ -42,10 +42,9 @@ a:hover, a, a:active{
   position: absolute;
   background: rgba(255,255,255,.96);
   border: 2px solid black;;
-  padding: 5%;
-  width: 20%;
-  margin-left: 35%;
-  margin-top: 20%;
+  width: 100%;
+  margin-left: 10%;
+  margin-top: 0%;
   z-index: 101;
   text-align: center;
   font-size: 20px;
@@ -66,20 +65,20 @@ a:hover, a, a:active{
 .close-btn:hover{
   color: #FFE5B4;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px) {
   .qotd{
     position: absolute;
     background: rgba(0,0,0,.96);
     border: 2px solid #FFE5B4;
     padding: 5%;
     color: #FFE5B4;
-    width: 60%;
-    margin-left: 13%;
-    margin-top: 36%;
+    width: 87%;
+    margin-top: -25%;
     z-index: 101;
     text-align: center;
     font-size: 20px;
-    border-radius: 2%
+    border-radius: 2%;
+    margin-left: 0%;
   }
   #home-title{
     position: absolute;;
@@ -90,7 +89,7 @@ a:hover, a, a:active{
     font-family: 'Open Sans Condensed', sans-serif;
   }
   .close-btn{
-    margin-top: -7%;
-    margin-left: 75%;
+    margin-top: -5%;
+    margin-left: 83%;
   }
 }
